# KeyShareOS

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
Hardware/: MacroPad.csv  MacroPad.kicad_pcb  MacroPad.kicad_prl  MacroPad.kicad_pro  MacroPad.kicad_sch  fp-lib-table
Hardware/Gerbers/: MacroPad-B_Cu.gbr  MacroPad-B_Mask.gbr  MacroPad-B_Paste.gbr  MacroPad-B_Silkscreen.gbr  MacroPad-Edge_Cuts.gbr  MacroPad-F_Cu.gbr  MacroPad-F_Mask.gbr  MacroPad-F_Paste.gbr  MacroPad-F_Silkscreen.gbr  MacroPad-NPTH.drl  MacroPad-PTH.drl  MacroPad-job.gbrjob
MacroApp/: project.yml
MacroApp/KeyShare/Actions/: ActionExecutor.swift  AppActionAction.swift  AppLaunchAction.swift  DesktopSwitchAction.swift  KeyboardShortcutAction.swift  (+6 more)
MacroApp/KeyShareTests/: ActionExecutorTests.swift  ActionValidationTests.swift  AppLaunchActionTests.swift  AppSwitchMonitorTests.swift  ConfigIntegrationTests.swift  ConfigManagerTests.swift  ConfigSchemaTests.swift  ConfigValidationTests.swift  ConstantsTests.swift  DesktopSwitchActionTests.swift  DeviceMonitorTests.swift  KeyboardShortcutActionTests.swift  MacroActionTests.swift  MacroProfileIntegrationTests.swift  MediaControlActionTests.swift  OSDOverlayTests.swift  OnboardingTests.swift  ProfileManagerTests.swift  ProfileReorderTests.swift  SerialProtocolTests.swift  TextTypeActionTests.swift  URLOpenActionTests.swift
firmware/: boot.py  code.py
tests/firmware/: conftest.py  test_heartbeat.py  test_key_events.py  test_serial_protocol.py
(+44 files in other folders)
